<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="350dp"
    android:layout_height="475dp"
    android:background="@color/white"
    android:padding="5dp"
    android:layout_gravity="center">
    <TextView
        android:id="@+id/txtclose"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:textColor="@color/black"
        android:text="@string/x"
        android:textStyle="bold"
        android:layout_gravity="end"
        android:gravity="center"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="130dp"
            android:layout_height="100dp"
            android:src="@drawable/logo"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/use_biometric_authentication"
    android:textAlignment="center"
    android:layout_gravity="center_horizontal"
    android:textColor="@color/black"
    android:textStyle="bold"
    />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:src="@drawable/biometric"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/biom"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"
            />

    </LinearLayout>
    <Button
        android:id="@+id/enablebio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enable_biometricc"
        android:layout_marginTop="25dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button"
        android:textColor="@color/white"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip_for_now"
        android:id="@+id/skip"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/main_blue_color"
        android:layout_marginTop="15dp"
        />
</LinearLayout>