<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_main"
    android:orientation="vertical"
    android:weightSum="9">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="@string/help_and_support"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.Toolbar>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="8"
        android:background="@drawable/recycler_view_bg"
        android:padding="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dummy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:letterSpacing="0.03"
            android:text="@string/for_any_query_regarding_basics_life_app_nplease_contact_to_us"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/r1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingTop="15dp"
            android:paddingRight="15dp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/dummy"
            >

            <ImageView
                android:id="@+id/i1"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/contact"/>

            <TextView
                android:id="@+id/tt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/please_call_us_at"
                android:layout_toEndOf="@+id/i1"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginStart="10dp"
                android:letterSpacing="0.03"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1800_4194270"
                android:layout_toEndOf="@+id/i1"
                android:layout_below="@id/tt1"
                android:textSize="16sp"
                android:textColor="@color/main_blue_color"
                android:layout_marginStart="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_10_00_am_6_00pm"
                android:textSize="10sp"
                android:textStyle="bold"
                android:textColor="@color/main_blue_color"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="5dp"/>

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/r2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="15dp"
            android:paddingTop="15dp"
            android:paddingRight="15dp"
            android:layout_below="@id/r1">

            <ImageView
                android:id="@+id/i2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/contactmail"/>

            <TextView
                android:id="@+id/tt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/write_to_us_at"
                android:layout_toEndOf="@+id/i2"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginStart="10dp"
                android:letterSpacing="0.03"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/support_basicslife_com"
                android:layout_toEndOf="@+id/i2"
                android:layout_below="@id/tt2"
                android:textSize="16sp"
                android:textColor="@color/main_blue_color"
                android:layout_marginStart="10dp"/>

        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>
