<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/grdnt"
    android:focusableInTouchMode="true"
    android:gravity="center"
    tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="150dp"
                    android:layout_height="120dp"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:src="@drawable/logo" />

            </RelativeLayout>
            <TextView
                android:id="@+id/textwelcome"
                style="@style/parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                />
                <EditText
                    android:id="@+id/uid"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:enabled="false"
                     />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/ic_password"
                app:hintTextAppearance="@style/TextLabel">

                <EditText
                    android:id="@+id/pass"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/login_password_hint"
                    android:inputType="numberPassword"
                    android:maxLength="6"
                    android:maxLines="1"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/anotheraccount"
                    style="@style/viewParent"
                    android:layout_alignParentStart="true"
                    android:text="@string/use_another_account"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/frgtpass"
                    style="@style/viewParent"
                    android:layout_alignParentEnd="true"
                    android:text="@string/forgot_mpin"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </RelativeLayout>


            <Button
                android:id="@+id/launchAuthentication"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/button"
                style="@style/parent"
                android:textAllCaps="false"
                android:text="@string/sign_in_with_mpin"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:id="@+id/enablebiometric"
                android:text="@string/enable_biometric"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                android:textColor="@color/black"
                android:textSize="20sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:id="@+id/biotext"
                    android:text="@string/login_with_biometric"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/biometric"
                    android:layout_width="80dp"
                    android:layout_height="70dp"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:src="@drawable/biometric" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                >
            <TextView
                android:id="@+id/hyper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hyperlink"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15sp" />

                <TextView
                android:id="@+id/copyR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/hyper"
                android:layout_centerInParent="true"
                android:text="@string/_2021_basicslife"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15sp" />
            </RelativeLayout>
        </LinearLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="20dp">
    </RelativeLayout>
</RelativeLayout>
