<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/grdnt"
    android:focusableInTouchMode="true"
    android:gravity="center"
    tools:context=".freshLoginPage">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:paddingTop="20dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="140dp"
                    android:layout_height="160dp"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:src="@drawable/logo"
                    android:contentDescription="@string/logo" />

            </RelativeLayout>
            <TextView

                style="@style/parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:fontFamily="@font/freightbold"
                android:text="@string/welcome_to_basics_life"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="UsingOnClickInXml" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputmobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/login_mobile_hint"
                app:prefixText="+91"
                app:prefixTextAppearance="@style/TextAppearance.AppCompat.Medium"
                app:startIconDrawable="@drawable/ic_mobile"
                app:hintTextAppearance="@style/TextLabel">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/uid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/launchAuthentication"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:background="@drawable/button"
                android:fontFamily="@font/freightbold"
                style="@style/parent"
                android:textAllCaps="false"
                android:text="@string/generate_mpinn"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:weightSum="12">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="3"
                    android:background="@color/black" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="3"
                    android:background="@color/black" />
            </LinearLayout>

            <TextView
                android:id="@+id/hyper"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:fontFamily="@font/freightbold"
                android:text="@string/hyperlink"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/copyR"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:fontFamily="@font/freight"
                android:text="@string/_2021_basicslifee"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
