<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grdnt"
    android:focusableInTouchMode="true"
    tools:context=".forgetPassword">


    <ImageView
        android:id="@+id/image"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="100dp"
        android:src="@drawable/forgetpass" />

    <TextView
        android:id="@+id/forgotpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image"
        android:layout_centerInParent="true"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/freightblack"
        android:text="@string/forgot_n_password"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forgotpass"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/freightbold"
        android:text="@string/length_textfrgtpass"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp" />


        <TextView
            android:id="@+id/uid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/desc"
            android:layout_centerInParent="true"
            android:maxLength="10"
            android:textSize="20sp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_mobile" />


    <Button
        android:id="@+id/launchAuthentication"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/uid"
        android:layout_centerInParent="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/button"
        android:focusable="true"
        android:text="@string/generate_mpin"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</RelativeLayout>

